--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@ body {
     margin-right: auto;
     margin-top:-30px;
     width:auto;
+    height: auto;
     position: relative;
     flex-basis:45%;
 }
