--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,15 @@ body {
     position: relative;
     flex-basis:45%;
 }
+#tvbutton {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top:0px;
+    width:auto;
+    height: auto;
+    position: relative;
+    flex-basis:content;
+}
 #contactbox {
     display:flex;
     height:100%;
