--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@ body {
 #landing {
     margin-left: auto;
     margin-right: auto;
-    margin-top:-45px;
+    margin-top:-5%;
     width:50%;
     flex-basis:100%;
 }
