--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,7 @@ body {
     width:100%;
     height:100%;
 }
+
 #contact {
     margin-left: auto;
     margin-right: auto;
@@ -53,18 +54,21 @@ body {
 #header {
     width:auto;
 }
-#social {
+social container {
     display:flex;
-    width:60%;
+    width:100%%;
     height:auto;
-    position:relative;
 }
-#glyphs {
+#social {
     width:100%;
     margin-left:auto;
     margin-right:auto;
-    flex-basis:fit-content;
+    flex-basis:content;
     margin-top:auto;
+}
+#glyphs {
+    width:20%;
+    margin-top:-2%;
 }
 a:hover {
     color:black;
