--- a/css/styles.css
+++ b/css/styles.css
@@ -11,15 +11,16 @@ body {
 }
 #main {
     width:75%;
-    height:auto%;
+    height:auto;
     display:flex;
+  
 }
 #landing {
     margin-left: auto;
     margin-right: auto;
     width:50%;
     flex-basis:100%;
-    margin-bottom:-90px;
+    position: relative;
 }
 #tvbutton {
     margin-left: auto;
@@ -65,6 +66,7 @@ social container {
     margin-right:auto;
     flex-basis:content;
     margin-top:auto;
+    position: relative;
 }
 #glyphs {
     width:20%;
