--- a/css/styles.css
+++ b/css/styles.css
@@ -58,8 +58,7 @@ body {
 }
 social container {
     display:flex;
-    width:100%%;
-    height:auto;
+    width:100%;
 }
 #social {
     width:100%;
